--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -1,3 +1,33 @@
 .firstTitle{
-    width: 3.5em;
+    width: 4rem;
+    height: 4rem;
+    border: 4px;
+}
+.img-thumbnail{
+    width: 8em;
+}
+.fa-bars{
+    color: white;
+}
+.container{
+    background-color: rgba(128, 128, 128, 0.609);
+    height: 1200px;
+    margin: 4%;
+}
+.header{
+    margin: -3%;
+}
+.card{
+    margin: 3%;
+    padding: 0%;
+}
+.card-header{
+    margin: 1% -3% 1% -3%;
+}
+#movies{
+    display: none;
+}
+button{
+    background: none;
+    border: none;
 }
