--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -11,8 +11,10 @@
 }
 .container{
     background-color: rgba(128, 128, 128, 0.609);
-    height: 1200px;
     margin: 4%;
+    height: 100vh;
+    border-radius: 4px;
+
 }
 .header{
     margin: -3%;
@@ -20,14 +22,25 @@
 .card{
     margin: 3%;
     padding: 0%;
-}
-.card-header{
-    margin: 1% -3% 1% -3%;
-}
-#movies{
-    display: none;
+    background: none;
+    border: none;
 }
 button{
     background: none;
     border: none;
+}
+ ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    box-shadow: 0 0 1px rgba(255,255,255,.5);
+} 
+#movies{
+    overflow: scroll;
+    overflow-x: hidden;
+    height: 80vh;
+
 }
