--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -13,11 +13,12 @@
     background-color: rgba(128, 128, 128, 0.609);
     margin: 4%;
     height: 100vh;
-    border-radius: 4px;
-
+    border-radius: 1em;
+    
 }
 .header{
-    margin: -3%;
+    border-top-right-radius: 1em;
+    border-top-left-radius: 1em;
 }
 .card{
     margin: 3%;
@@ -42,5 +43,9 @@ button{
     overflow: scroll;
     overflow-x: hidden;
     height: 80vh;
-
+}
+.card-header{
+    background-color: #ffff;
+    margin: 2%;
+    border-radius: 20rem;
 }
