--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -11,7 +11,7 @@
 }
 .container{
     background-color: rgba(128, 128, 128, 0.609);
-    margin: 4%;
+    margin-top: 4%;
     height: 100vh;
     border-radius: 1em;
     
