--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -49,3 +49,14 @@ button{
     margin: 2%;
     border-radius: 20rem;
 }
+
+@media (max-width: 700px) {
+    .btn-link{
+        font-size: 14px !important;
+    }
+    .firstTitle{
+        width: 2.5rem;
+        height: 2.5rem;
+        border: 4px;
+    }
+}
