--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -9,7 +9,7 @@
 }
 .container{
     background-color: rgba(128, 128, 128, 0.609);
-    margin-top: 4%;
+    margin-top: 2%;
     height: 150vh;
     border-radius: 1em;
 }
@@ -56,5 +56,8 @@ button{
         width: 2.5rem;
         height: 2.5rem;
         border: 4px;
+    }
+    .container{
+        margin-top: 0%;
     }
 }
